# miniature-eureka

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  dbg.h  main 2022年07月19日22:22:26.cpp  main 2022年07月20日23:06:09.cpp  main.cpp  print.txt  template.cpp  打家劫舍.cpp
0000 API 模板 类/: ListNode.h  TreeNode.h  template.cpp  vector.cpp
codeforces/contest_1/: B.cpp  C.cpp
codeforces/contest_2/: contest-2-a.cpp  main copy.cpp
dan-diao-zhan/: 1124. 表现良好的最长时间段.cpp  962. 最大宽度坡.cpp
design-pattern/: observer.cpp
dfs-bfs/: 104.maximum-depth-of-binary-tree.cpp  intro2-algo.page334.bfs.cpp
for-fun-and-tools/: 按比例求数对.cpp
segment-tree/: 线段树的实现.cpp
tree/: 655.print-binary-tree.cpp
un-category/: 1455.check-if-a-word-occurs-as-a-prefix-of-any-word-in-a-sentence.cpp  1486.xor-operation-in-an-array.cpp  2144.minimum-cost-of-buying-candies-with-discount.cpp  537.complex-number-multiplication.cpp  539.minimum-time-difference.cpp  646.maximum-length-of-pair-chain.cpp  654.maximum-binary-tree.cpp  75.sort-colors.cpp  885.spiral-matrix-iii.cpp  895.maximum-frequency-stack.cpp  Average value of sliding window.cpp  kuaipai-shaobing-wenti.cpp  quick-sort-from-web.cpp  剑指 Offer II 024. 反转链表.cpp  剑指 Offer II 066. 单词之和.cpp  奇偶分开排序.cpp
二叉树的路径问题/: 2246. 相邻字符不同的最长路径.cpp  543. 二叉树的直径.cpp
位运算/: 面试题 17.19. 消失的两个数字.cpp
写着好玩儿的/: 按比例求数对.cpp
前缀和/: 1074. 元素和为目标值的子矩阵数量.cpp  1094. 拼车.cpp  1177. 构建回文串检测.cpp  1292. 元素和小于等于阈值的正方形的最大边长.cpp  1314. 矩阵区域和.cpp  209. 长度最小的子数组.cpp  238. 除自身以外数组的乘积.cpp  303. 区域和检索 - 数组不可变.cpp  363. 矩形区域不超过 K 的最大数值和.cpp  497. 非重叠矩形中的随机点.cpp  523. 连续的子数组和.cpp  724. 寻找数组的中心下标.cpp  764. 最大加号标志.cpp  930. 和相同的二元子数组.cpp  974. 和可被 K 整除的子数组.cpp
动态规划/: 10. 正则表达式匹配.cpp  5. 最长回文子串.cpp  754. 到达终点数字.cpp  790. 多米诺和托米诺平铺.cpp
单调栈/: 1124. 表现良好的最长时间段【我自己用单调栈写的】.cpp  496. 下一个更大的元素I(简单).cpp  503. 下一个更大元素 II.cpp  962. 最大宽度坡.cpp  962. 最大宽度坡【自己做一遍】.cpp
双指针/: 11. 盛最多水的容器.cpp  15. 三数之和.cpp  16. 最接近的三数之和.cpp  18. 四数之和.cpp  26. 删除有序数组中的重复项.cpp  27. 移除元素.cpp  344. 反转字符串.cpp
哈希/: 1640. 能否连接形成数组.cpp
回溯/: 1106. 解析布尔表达式.cpp  22. 括号生成.cpp  37. 解数独.cpp
图/: 1042. 不邻接植花.cpp  1192. 查找集群内的关键连接.cpp  1192. 查找集群内的关键连接[省略回溯数组].cpp  1203.项目管理[官方的双拓扑排序].cpp  1298. 你能从盒子里获得的最大糖果数.cpp  1368. 使网格图至少有一条有效路径的最小代价.cpp  1377. T 秒后青蛙的位置.cpp  1971. 寻找图中是否存在路径.cpp  210. 课程表 II[拓扑排序].cpp  310. 最小高度树.cpp  332. 重新安排行程.cpp  399. 除法求值.cpp  684. 冗余连接.cpp  685. 冗余连接 II.cpp  743. 网络延迟时间.cpp  765. 情侣牵手.cpp  797. 所有可能的路径[广度优先].cpp  797. 所有可能的路径[深度优先].cpp  802. 找到最终的安全状态.cpp  834. 树中距离之和.cpp  841. 钥匙和房间(并查集).cpp  841. 钥匙和房间.cpp  85. 判断二分图.cpp  851. 喧闹和富有.cpp  864. 获取所有钥匙的最短路径.cpp  864. 获取所有钥匙的最短路径[优化版的].cpp  864. 获取所有钥匙的最短路径【自己写的】.cpp  882. 细分图中的可到达结点.cpp  886. 可能的二分法.cpp  947. 移除最多的同行或同列石头.cpp  959. 由斜杠划分区域.cpp  990. 等式方程的可满足性.cpp  997. 找到小镇的法官.cpp  LCP 07. 传递信息.cpp  floyd算法 - 多源最短路径.cpp  图的前向星型.cpp  无根树转为有根树.cpp
字符串/: 1684. 统计一致字符串的数目.cpp  1704. 判断字符串的两半是否相似.cpp  28. 找出字符串中第一个匹配项的下标[看毛片KMP].cpp  791. 自定义字符串排序.cpp
宽度优先和深度优先/: 104.maximum-depth-of-binary-tree.cpp  1161. 最大层内元素和.cpp  intro2-algo.page334.bfs.cpp
宽度优先深度优先/: 1161. 最大层内元素和.cpp
并查集/: 547. 省份数量.cpp
循环数组/: 1652. 拆炸弹.cpp
扫描线/: 850. 矩形面积 II.cpp
找规律/: 292. Nim 游戏.cpp
排列/: CodeForces - B. Kevin and Permutation.cpp
操作模拟/: 12. 整数转罗马数字.cpp  13. 罗马数字转整数.cpp  1678. 设计 Goal 解析器.cpp  1700. 无法吃午餐的学生数量.cpp  48. 旋转图像.cpp  6. Z 字形变换.cpp  779. 第K个语法符号.cpp  904. 水果成篮.cpp
数组和子序列/: 491. 递增子序列.cpp  940. 不同的子序列 II.cpp
整数操作/: 670. 最大交换.cpp  8. 字符串转换整数 (atoi).cpp  9. 回文数.cpp
未分类/: 1. Two Sum.cpp  10. 正则表达式匹配.cpp  14. 最长公共前缀.cpp  1441. 用栈操作构建数组.cpp  1455.check-if-a-word-occurs-as-a-prefix-of-any-word-in-a-sentence.cpp  1598.crawler-log-folder.cpp  1608. 特殊数组的特征值.cpp  1619. 删除某些元素后的数组均值.cpp  1620. 网络信号最好的坐标.cpp  1624. 两个相同字符之间的最长子字符串.cpp  1636. 按照频率将数组升序排序.cpp  1662. 检查两个字符串数组是否相等.cpp  1668. 最大重复子字符串.cpp  1710. 卡车上的最大单元数.cpp  1768. 交替合并字符串.cpp  1773. 统计匹配检索规则的物品数量.cpp  1790. 仅执行一次字符串交换能否使两个字符串相等.cpp  1815. 得到新鲜甜甜圈的最多组数.cpp  2104. 子数组范围和.cpp  231. 2 的幂.cpp  2444. 统计定界子数组的数目.cpp  2444. 统计定界子数组的数目【单调队列解法】.cpp  2447. 最大公因数等于 K 的子数组数目.cpp  28. 找出字符串中第一个匹配项的下标.cpp  34. 在排序数组中查找元素的第一个和最后一个位置.cpp  36. 有效的数独.cpp  38. 外观数列.cpp  39. 组合总和.cpp  481. 神奇字符串.cpp  49. 字母异位词分组.cpp  537.complex-number-multiplication.cpp  654.maximum-binary-tree.cpp  672. 灯泡开关 Ⅱ.cpp  698. 划分为k个相等的子集.cpp  769. 最多能完成排序的块.cpp  775. 全局倒置与局部倒置.cpp  775. 全局倒置与局部倒置【树状数组】.cpp  782.transform-to-chessboard.cpp  784. 字母大小写全排列.cpp  792. 匹配子序列的单词数.cpp  (+25 more)
未知题型/: 剑指 Offer II 066. 单词之和.cpp  奇偶分开排序.cpp
树/: 655.print-binary-tree.cpp
模板/: template.cpp
比赛/2022-09-17 第 87 场双周赛/: 6185. 运动员和训练师的最大匹配数.cpp  6186. 按位或最大的最小子数组长度.cpp  6187. 完成所有交易的初始最少钱数.cpp
比赛/2022-09-18 第 311 场周赛/: 6180. 最小偶倍数.cpp  6181. 最长的字母序连续子字符串的长度.cpp
比赛/2022-09-18 第311场周赛/: 6182. 反转二叉树的奇数层.cpp  6183. 字符串的前缀分数和.cpp
比赛/2022-10-01 第 88 场双周赛/: 1.cpp  2.cpp
比赛/2022-11-06 第 318 场周赛/: 3.cpp  6229. 对数组执行操作.cpp  6230. 长度为 K 子数组中的最大和.cpp  6231. 雇佣 K 位工人的总代价.cpp
比赛/双周赛/2022-09-17 双周赛第 87 场/: 6185. 运动员和训练师的最大匹配数.cpp  6186. 按位或最大的最小子数组长度.cpp  6187. 完成所有交易的初始最少钱数.cpp
比赛/双周赛/2022-10-01 周赛第 88 场双/: 1.cpp  2.cpp  3.cpp
比赛/周赛/2022-09-18 第 311 场周赛/: 6180. 最小偶倍数.cpp  6181. 最长的字母序连续子字符串的长度.cpp  6182. 反转二叉树的奇数层.cpp  6183. 字符串的前缀分数和.cpp
比赛/周赛/2022-09-25 第 312 场周赛/: 4.cpp  6188. 按身高排序.cpp  6189. 按位与最大的最长子数组.cpp  6190. 找到所有好下标.cpp
比赛/周赛/2022-11-06 第 318 场周赛/: 6229. 对数组执行操作.cpp  6230. 长度为 K 子数组中的最大和.cpp  6231. 雇佣 K 位工人的总代价.cpp
比赛/周赛/2022-11-13 第 319 场周赛/: 第1题.cpp  第2题.cpp
比赛/周赛/2022-11-13 第 320 场周赛/: 第1题.cpp  第2题.cpp  第3题.cpp
比赛/第 312 场周赛/: 6188. 按身高排序.cpp  6189. 按位与最大的最长子数组.cpp  6190. 找到所有好下标.cpp
比赛/网易有道 2023 届秋招技术岗公开笔试/: 4.cpp
滑动窗口/: 1124. 表现良好的最长时间段.cpp  1703. 得到连续 K 个 1 的最少相邻交换次数.cpp  剑指 Offer 59 - I. 滑动窗口的最大值.cpp
线段树/: 2213. 由单个字符重复的最长子字符串【0】【线段树】.cpp  线段树的实现.cpp
组合/: 17. 电话号码的字母组合.cpp  47. 全排列 II.cpp
链表/: 21. 合并两个有序链表.cpp  24. 两两交换链表中的节点.cpp  剑指 Offer II 024. 反转链表.cpp
