cmake_minimum_required(VERSION 3.18)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)

# add_definitions(-DUNICODE -D_UNICODE)    #使用UNICODE字符集

# add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>") #使用utf-8文件编码



add_executable("9e0dea7dab614a4699e79e8b452c5705" "图/1203.项目管理[官方的双拓扑排序].cpp")
add_executable("9ed5fb83cff94937b59bbca54a242a5e" "操作模拟/1678. 设计 Goal 解析器.cpp")
add_executable("90cacf18792f4dfa868f8e67ce03131b" "图/1298. 你能从盒子里获得的最大糖果数.cpp")
add_executable("16524909fa7c4958aa87f886000d4241" "图/1368. 使网格图至少有一条有效路径的最小代价.cpp")
add_executable("63fcbfb2ee2848efa4758e44817a94bf" "图/1377. T 秒后青蛙的位置.cpp")
add_executable("dae5e2de0eb141b98b494283ab53e6d9" "字符串/1684. 统计一致字符串的数目.cpp")
add_executable("2c21cb94fcaf4e62b6b6c4ee305763d2" "前缀和/238. 除自身以外数组的乘积.cpp")
add_executable("4925ce689d41475fb21419615ba9490d" "前缀和/303. 区域和检索 - 数组不可变.cpp")
add_executable("015e8afd4ce2425b863530d9c842737f" "前缀和/363. 矩形区域不超过 K 的最大数值和.cpp")
add_executable("1abf928998bd4d9a8906af3820836bec" "前缀和/764. 最大加号标志.cpp")
add_executable("14ceb9719fe34d12b81011e6ba294847" "前缀和/497. 非重叠矩形中的随机点.cpp")
add_executable("300d58ab48ef4c31934289fd575e6230" "图/864. 获取所有钥匙的最短路径.cpp")
add_executable("84e790b383364763bebeac73fd06c694" "字符串/1704. 判断字符串的两半是否相似.cpp")
add_executable("e65d08d65ec346548136c99abb9fc0c2" "图/864. 获取所有钥匙的最短路径[优化版的].cpp")
add_executable("12f17ca7d3dc4b75881f9b853637798c" "图/864. 获取所有钥匙的最短路径【自己写的】.cpp")
add_executable("f3fb129d666c44169a41378c8d2a3c11" "前缀和/523. 连续的子数组和.cpp")
add_executable("a416fa985c5f4cc29786376c72c2b770" "前缀和/724. 寻找数组的中心下标.cpp")
add_executable("9f81a33b043b40edbfc7c43f4ebd0b85" "前缀和/930. 和相同的二元子数组.cpp")
add_executable("2ba3e0e231af4130aa7ac0f90b4e2a66" "前缀和/974. 和可被 K 整除的子数组.cpp")
add_executable("9be36e739ff24813915b0754a66fc002" "动态规划/790. 多米诺和托米诺平铺.cpp")
add_executable("1e239d9225af4d0699bf50c9aef70ffb" "前缀和/1074. 元素和为目标值的子矩阵数量.cpp")
add_executable("b8f91e79266248b388294b257add6e23" "滑动窗口/1124. 表现良好的最长时间段.cpp")
add_executable("bbbb29fdfeb0404e81c6570c7d787c78" "字符串/791. 自定义字符串排序.cpp")
add_executable("e389af42a12d419db1008632c2541e37" "比赛/周赛/2022-11-13 第 319 场周赛/第1题.cpp")
add_executable("0d6be00ba7104b8aa6402a37da1c7d19" "比赛/周赛/2022-11-13 第 319 场周赛/第2题.cpp")
add_executable("fcfd536228ab4a73b94b465af28f03f8" "比赛/周赛/2022-11-13 第 319 场周赛/第3题.cpp")
add_executable("08ec4a2ea07f47e09e365b55fc4677a3" "比赛/周赛/2022-11-13 第 319 场周赛/第4题.cpp")
add_executable("3a2dce611fcd4a71b990485e6e32e212" "前缀和/1177. 构建回文串检测.cpp")
add_executable("8bff948b959c4853909998caedffc067" "排列/CodeForces - B. Kevin and Permutation.cpp")
add_executable("1b46ac31610e4a668f7c439d340dbff1" "未分类/2447. 最大公因数等于 K 的子数组数目.cpp")
add_executable("e169b1f4e2c44a76883debdfaa89a2ee" "未分类/2444. 统计定界子数组的数目.cpp")
add_executable("d18c8d1063404f9194ddcd33957cb1ca" "未分类/2444. 统计定界子数组的数目【单调队列解法】.cpp")
add_executable("cffb26d64b1445cd93499f1374e9d3dc" "未分类/805. 数组的均值分割.cpp")
add_executable("b688d367ebcd4d99a3f98cd6365448ad" "未分类/805. 数组的均值分割【动态规划】.cpp")
add_executable("260ca1538a414a93940330c1c080e34b" "滑动窗口/剑指 Offer 59 - I. 滑动窗口的最大值.cpp")

add_executable("931d4a951de94f449b0e068ccf193beb" "未分类/775. 全局倒置与局部倒置.cpp")
add_executable("a75888f88c344d9980c810fc6d78802c" "未分类/775. 全局倒置与局部倒置【树状数组】.cpp")

add_executable("b4aacbadc8e247e99bd303ec955c382c" "未分类/1710. 卡车上的最大单元数.cpp")
add_executable("1b999e87946a42fc8612432e3c4c0d58" "单调栈/1124. 表现良好的最长时间段.cpp")



add_executable("4b7ceb22252e435da1f36d6eb20b3209" "未分类/792. 匹配子序列的单词数.cpp")
add_executable("ee84d61f11ef42229a5f20f362c54154" "单调栈/1124. 表现良好的最长时间段【我自己用单调栈写的】.cpp")
add_executable("f00e42393888422faa3887e501af79ea" "未分类/2104. 子数组范围和.cpp")

add_executable("faa6ba02819c46b5832d23459b4d90b8" "单调栈/962. 最大宽度坡【自己做一遍】.cpp")
add_executable("541d49de210c40d4bb29fd3b40721f81" "未分类/891. 子序列宽度之和.cpp")
add_executable("78e0ab147e064c74bd3253f758b7132d" "前缀和/1292. 元素和小于等于阈值的正方形的最大边长.cpp")
add_executable("21c623c909384bf080f8bc0982d6e434" "滑动窗口/1703. 得到连续 K 个 1 的最少相邻交换次数.cpp")
add_executable("6f5f7e4c29f64abba2936e2c8392c17b" "未分类/799. 香槟塔.cpp")
add_executable("723f2b5a3d7f4cf3bbf3138098be9b19" "比赛/周赛/2022-11-13 第 320 场周赛/第1题.cpp")
add_executable("2cfbb90b1299496295ec52726474e262" "比赛/周赛/2022-11-13 第 320 场周赛/第2题.cpp")
add_executable("5e6810ee57824f66bd42a84d2d84a866" "比赛/周赛/2022-11-13 第 320 场周赛/第3题.cpp")

